Separate top-scores-fetching from recommendations-fetching